--- a/04_Manhole/manhole_eevee.html
+++ b/04_Manhole/manhole_eevee.html
@@ -60,7 +60,7 @@
     }
 
     .manholeshadow {
-      filter: drop-shadow(0px 0px 15px rgb(37, 204, 255))
+      filter: drop-shadow(0px 0px 15px rgb(255, 219, 41))
     }
 
     .manholeleft h1 {
@@ -105,7 +105,7 @@
       /* border-collapse: collapse; */
       border-radius: 10px;
       /* box-shadow: 0 7px 10px 0 black; */
-      background-image: url(../src/assets/background/ocean3.png);
+      background-image: url(../src/assets/background/viliage.png);
       background-size: 530px 100%;
 
     }
@@ -121,7 +121,6 @@
       border-collapse: collapse;
       border-radius: 10px;
       /* box-shadow: 0 7px 10px 0 black; */
-
       margin: 0;
     }
 
@@ -134,8 +133,7 @@
       /* border: 3px solid rgb(0, 183, 255); */
       border-radius: 7px;
       overflow-y: auto;
-
-      background-image: url(../src/assets/bg_dot.png);
+      background-image: url(../src/assets/bg_dot.png)
     }
 
 
@@ -156,7 +154,6 @@
       border-radius: 7px;
       background-color: white;
       box-shadow: 0px 0px 10px 10px #dbdbdb;
-
 
     }
 
@@ -193,14 +190,15 @@
     <div>
       <div class="manhole">
         <div class="manholeleft">
-          <h1>마치다</h1>
-          <img class="manholeshadow" src="../src/assets/hole/Kinki/Hyogo/awaji3/awaji3_l.png" alt="">
+          <h1>요코하마</h1>
+          <img class="manholeshadow" src="../src/assets/hole/Kanto/Kanagawa/yokohama4/yokohama4_l.png" alt="">
           <div class="manholeleft_under">
-            <img src="../src/assets/achv/gif/lugia.webp" alt=""
-              style="position: absolute; width: 155px; left: 35%; bottom: 30%; ; transform: scaleX(-1) rotate(25deg);">
+            <img src="../src/assets/achv/gif/raichu.webp" alt=""
+              style="position: absolute; width: 50px; left: 45%; bottom: 10%;">
             <!-- <img src="../src/assets/gif/trainerfront.gif" alt=""
               style="position: absolute; width: 50px; left: 30%; bottom: 10%;"> -->
-            <img src="../src/assets/gif/" alt="" style="position: absolute; width: 50px; left: 20%; bottom: 10%;">
+            <img src="../src/assets/achv/gif/pikachu.webp" alt=""
+              style="position: absolute; width: 30px; left: 39%; bottom: 10%; transform: scaleX(-1);">
             <img src="../src/assets/gif/" alt="" style="position: absolute; width: 50px; left: 30%; bottom: 10%;">
             <!-- <img src="../src/hole/moninfo/trainer.gif" alt=""
               style="position: absolute; width: 80px; left: 40%; bottom: 10%; transform: scaleX(-1) ;"> -->
@@ -218,7 +216,7 @@
                   <div class="pokemoninfo">
                     <table>
                       <tr>
-                        <th rowspan="2"><img src="../src/assets/achv/mini/lugia.webp" alt="" style="margin: 0 10px ;">
+                        <th rowspan="2"><img src="../src/assets/achv/mini/pika.webp" alt="" style="margin: 0 10px ;">
                         </th>
                         <th>이름</th>
                         <th>도감번호</th>
@@ -229,23 +227,56 @@
                         <th>몸무게</th>
                       </tr>
                       <tr>
-                        <td>루기아</td>
-                        <td>No.0249</td>
+                        <td>피카츄</td>
+                        <td>No.0025</td>
                         <td>
                           <div style="display:  table-cell; vertical-align:middle;"><img
-                              src="../src/hole/moninfo/fly.png" alt=""><img src="../src/hole/moninfo/espher.png" alt="">
+                              src="../src/hole/moninfo/thunder.png" alt="">
                           </div>
                         </td>
-                        <td>에스퍼,비행</td>
-                        <td>5.2m</td>
-                        <td>잠수포켓몬</td>
-                        <td>루기아</td>
-                        <td>216.0kg</td>
+                        <td>전기</td>
+                        <td>0.4m</td>
+                        <td>쥐포켓몬</td>
+                        <td><img src="../src/hole/moninfo/m.png" alt=""><img src="../src/hole/moninfo/f.png" alt="">
+                        </td>
+                        <td>6.0kg</td>
                       </tr>
                     </table>
                   </div>
                 </li>
 
+                <li>
+                  <div class="pokemoninfo">
+                    <table>
+                      <tr>
+                        <th rowspan="2"><img src="../src/assets/achv/mini/raichu.webp" alt="" style="margin: 0 10px ;">
+                        </th>
+                        <th>이름</th>
+                        <th>도감번호</th>
+                        <th colspan="2">타입</th>
+                        <th>키</th>
+                        <th>분류</th>
+                        <th>성별</th>
+                        <th>몸무게</th>
+                      </tr>
+                      <tr>
+                        <td>라이츄</td>
+                        <td>No.0026</td>
+                        <td>
+                          <div style="display:  table-cell; vertical-align:middle;"><img
+                              src="../src/hole/moninfo/thunder.png" alt="">
+                          </div>
+                        </td>
+                        <td>전기</td>
+                        <td>0.8m</td>
+                        <td>쥐포켓몬</td>
+                        <td><img src="../src/hole/moninfo/m.png" alt=""><img src="../src/hole/moninfo/f.png" alt="">
+                        </td>
+                        <td>30.0kg</td>
+                      </tr>
+                    </table>
+                  </div>
+                </li>
               </ul>
 
             </div>
