[UPDATE] 데이터 추가에 따른 변경사항

--- a/src/pages/Main/mainPage.html
+++ b/src/pages/Main/mainPage.html
@@ -50,32 +50,32 @@
       <!-- modal end -->
       <div class="map">
         <img src="/src/assets/manhole_main_grey.png" width="1000px" alt="" />
-        <a class="land-box">
+        <a class="land-box" id="간토">
           <div class="regionbox" style="left: 76%; bottom: 25%">
             <h1 class="orange">간토</h1>
           </div>
         </a>
-        <a class="land-box">
+        <a class="land-box" id="홋카이도.도호쿠">
           <div class="regionbox" style="left: 67%; bottom: 70%">
             <h1 class="blue">홋카이도•도호쿠</h1>
           </div>
         </a>
-        <a class="land-box">
+        <a class="land-box" id="주부">
           <div class="regionbox" style="left: 58%; bottom: 30%">
             <h1 class="green">주부</h1>
           </div>
         </a>
-        <a class="land-box">
+        <a class="land-box" id="긴키">
           <div class="regionbox" style="left: 43%; bottom: 20%">
             <h1 class="red">긴키</h1>
           </div>
         </a>
-        <a class="land-box">
+        <a class="land-box" id="주고쿠">
           <div class="regionbox" style="left: 22%; bottom: 30%">
             <h1 class="yellow">주고쿠•시코쿠</h1>
           </div>
         </a>
-        <a class="land-box">
+        <a class="land-box" id="규슈">
           <div class="regionbox" style="left: 2%; bottom: 15%">
             <h1 class="pink">규슈•오키나와</h1>
           </div>
