--- a/src/pages/Manhole/manholePage.html
+++ b/src/pages/Manhole/manholePage.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div class="tablecontainer" style="display: none"></div>
     <!-- container -->
     <div class="city">
       <div class="cityname">
