[ADD] manholeDetail modal

--- a/src/pages/Manhole/manholePage.html
+++ b/src/pages/Manhole/manholePage.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tokyo</title>
     <link rel="stylesheet" href="manholePage.css" />
+    <link rel="stylesheet" href="manholeDetail/manholeDetail.css" />
   </head>
 
   <body>
-    <div class="tablecontainer" style="display: none"></div>
+    <div class="manholeDetail-container" style="display: none"></div>
+
     <!-- container -->
     <div class="city">
       <div class="cityname">
