--- a/01_Mainpage/Logintest.html
+++ b/01_Mainpage/Logintest.html
@@ -329,26 +329,25 @@
   <div class="trainertop">
     <h2>&nbsp;Pokémon Trainer License</h2>
   </div>
-  <div class="trainerleft"><img src="./src/trainer.png" alt="" width="150px" style="display: block;
+  <div class="trainerleft"><img src="./src/trainer.png" alt="" width="100px" style="display: block;
   margin: 30px auto ;"></div>
   <div class="trainerright">
-    <div class="trainerright-upper"><img src="../src/achv/badge/강철.webp" alt=""><img
-        src="../src/achv/badge/격투.webp" alt=""><img src="../src/achv/badge/독.webp" alt=""><img
-        src="../src/achv/badge/전기.webp" alt=""><img src="../src/achv/badge/에스퍼.webp" alt=""><img
-        src="../src/achv/badge/드래곤.webp" alt=""><img src="../src/achv/badge/풀.webp" alt=""></div>
 
     <div class="trainerright-left">
       <table>
         <tr>
-          <th>
-            <h5 style="display: inline;">진행중인 도전과제 <h6 style="display: inline;">더보기</h6>
-            </h5>
-          </th>
+
         </tr>
       </table>
 
       <div class="trainerright-left-bottom">
         <table>
+          <th>
+            <a href="">
+              <h5 style="display: inline;">진행중인 도전과제 <h6 style="display: inline;">더보기</h6>
+              </h5>
+            </a>
+          </th>
           <tr>
             <td>영원한 나의 친구</td>
             <th><img src="../src/assets/achv/mini/pika.webp" alt=""></th>
@@ -392,12 +391,12 @@
         </table>
       </div>
     </div>
-    <div class="trainerright-right">
+    <!-- <div class="trainerright-right">
       <img src="../src/assets/achv/mini/yadon.webp" alt="" style="left: 20%; top: 30%">
       <img src="../src/assets/achv/mini/eve.webp" alt="" style="left: 50%; top: 50%">
       <img src="../src/assets/achv/mini/tangguri.webp" alt="" style="left: 24%; top:60%; ">
       <img src="../src/assets/achv/mini/gorapaduk.webp" alt="" style="left: 70%; top: 80%">
-    </div>
+    </div> -->
   </div>
 </div>
 <!-- License end -->
@@ -417,7 +416,7 @@
     modal.style.display = 'none';
   });
 </script>
-<link rel="stylesheet" href="./login_style_grey.css" />
+<link rel="stylesheet" href="./login.css" />
 <script src="./login.js"></script>
 <!-- login end -->
 
