--- a/01_Mainpage/Mainpage.html
+++ b/01_Mainpage/Mainpage.html
@@ -274,7 +274,7 @@
 </div>
 </body>
 <!-- login -->
-<!-- <div class="container" id="container" style="position: absolute; left: 40px; top: 40px">
+<div class="container" id="container" style="position: absolute; left: 40px; top: 40px">
   <div class="form-container sign-up-container">
     <form action="#">
       <h1>트레이너 등록</h1>
@@ -323,7 +323,7 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 <!-- License -->
 <div class="containerlicense" id="containerlicense" style="position: absolute; left: 40px; top: 40px; ;">
   <div class="trainertop">
