--- a/01_Mainpage/Logintest.html
+++ b/01_Mainpage/Logintest.html
@@ -82,6 +82,10 @@
       }
     }
 
+    .world:hover {
+      animation: rotate 1.0s linear infinite;
+    }
+
     a h1 {
       color: rgb(84, 84, 84);
     }
@@ -162,7 +166,7 @@
   </div>
 </div>
 <div class="container1">
-  <audio id="player" src="../src/assets/bgm/1-40. Goldenrod City.mp3" autoplay controls loop
+  <audio id="player" src="../src/assets/bgm/1-40. Goldenrod City.mp3" autoplay loop
     onloadstart="this.volume=0.15"></audio>
   <!-- <audio src="../bgm/1-05. New Bark Town.mp3" autoplay loop onloadstart="this.volume=0.2"></audio> -->
 
@@ -326,78 +330,7 @@
 </div> -->
 <!-- License -->
 <div class="containerlicense" id="containerlicense" style="position: absolute; left: 40px; top: 40px; ;">
-  <div class="trainertop">
-    <h2>&nbsp;Pokémon Trainer License</h2>
-  </div>
-  <div class="trainerleft"><img src="./src/trainer.png" alt="" width="100px" style="display: block;
-  margin: 30px auto ;"></div>
-  <div class="trainerright">
 
-    <div class="trainerright-left">
-      <table>
-        <tr>
-
-        </tr>
-      </table>
-
-      <div class="trainerright-left-bottom">
-        <table>
-          <th>
-            <a href="">
-              <h5 style="display: inline;">진행중인 도전과제 <h6 style="display: inline;">더보기</h6>
-              </h5>
-            </a>
-          </th>
-          <tr>
-            <td>영원한 나의 친구</td>
-            <th><img src="../src/assets/achv/mini/pika.webp" alt=""></th>
-          </tr>
-          <tr>
-            <td>다이아몬드보다 딱딱한 껍질</td>
-            <th><img src="../src/assets/achv/mini/celler.png" alt=""></th>
-          </tr>
-          <tr>
-            <td>먹고나면 잘 뿐</td>
-            <th><img src="../src/assets/achv/mini/jamman.webp" alt=""></th>
-          </tr>
-          <tr>
-            <td>손발에 불꽃을 두르고</td>
-            <th><img src="../src/assets/achv/mini/bulkot.webp" alt=""></th>
-          </tr>
-          <tr>
-            <td>악몽 속에 나타난 정체</td>
-            <th><img src="../src/assets/achv/mini/darkrai.webp" alt=""></th>
-          </tr>
-          <tr>
-            <td>기본적으로 멍하니 있음</td>
-            <th><img src="../src/assets/achv/mini/yadoran.webp" alt=""></th>
-          </tr>
-          <tr>
-            <td>그림자 속의 저주</td>
-            <th><img src="../src/assets/achv/mini/phantom.webp" alt=""></th>
-          </tr>
-          <tr>
-            <td>바다로 떨어진 무수한 별들</td>
-            <th><img src="../src/assets/achv/mini/bulgasari.webp" alt=""></th>
-          </tr>
-          <tr>
-            <td>생명과 공존의 상징</td>
-            <th><img src="../src/assets/achv/mini/lugia.webp" alt=""></th>
-          </tr>
-          <tr>
-            <td>모든 것들의 선조</td>
-            <th><img src="../src/assets/achv/mini/myu.webp" alt=""></th>
-          </tr>
-        </table>
-      </div>
-    </div>
-    <!-- <div class="trainerright-right">
-      <img src="../src/assets/achv/mini/yadon.webp" alt="" style="left: 20%; top: 30%">
-      <img src="../src/assets/achv/mini/eve.webp" alt="" style="left: 50%; top: 50%">
-      <img src="../src/assets/achv/mini/tangguri.webp" alt="" style="left: 24%; top:60%; ">
-      <img src="../src/assets/achv/mini/gorapaduk.webp" alt="" style="left: 70%; top: 80%">
-    </div> -->
-  </div>
 </div>
 <!-- License end -->
 <link rel="stylesheet" href="./modal.css">
