--- a/04_Manhole/manhole_Pikachu.html
+++ b/04_Manhole/manhole_Pikachu.html
@@ -133,7 +133,12 @@
       /* border: 3px solid rgb(0, 183, 255); */
       border-radius: 7px;
       overflow-y: auto;
-      background-image: url(../src/assets/bg_dot.png)
+      padding: 0%;
+      background-image: url(../src/assets/bg_dot.png);
+      /* background-size: 100px;
+      background-repeat: */
+
+
     }
 
 
@@ -157,10 +162,14 @@
 
     }
 
+    .pokemoninfo table {
+      width: 100%;
+    }
+
     .pokemoninfo table,
     th,
     td {
-      border: solid #dbdbdb 1px;
+      border: solid #e9e9e9 1px;
       border-radius: 10px;
       padding: 2px;
     }
