--- a/04_Manhole/manhole_Pikachu.html
+++ b/04_Manhole/manhole_Pikachu.html
@@ -133,12 +133,8 @@
       /* border: 3px solid rgb(0, 183, 255); */
       border-radius: 7px;
       overflow-y: auto;
-      padding: 0%;
-      background-image: url(../src/assets/bg_dot.png);
-      /* background-size: 100px;
-      background-repeat: */
-
-
+      background-image: url(../src/assets/background/back.png);
+      background-size: 120%;
     }
 
 
