--- a/04_Manhole/manhole_Yadon.html
+++ b/04_Manhole/manhole_Yadon.html
@@ -133,7 +133,8 @@
       /* border: 3px solid rgb(0, 183, 255); */
       border-radius: 7px;
       overflow-y: auto;
-      background-image: url(../src/assets/bg_dot.png)
+      background-image: url(../src/assets/background/back.png);
+      background-size: 120%;
     }
 
 
