--- a/05_Achievement/Achievement_Badge(수호).html
+++ b/05_Achievement/Achievement_Badge(수호).html
@@ -277,14 +277,28 @@
       width: 60px;
       display: grid;
       display: block;
-      margin: 0 auto;
+      /* margin: 0 auto; */
       /* box-shadow: 0px 0px 6px 5px gold; */
       filter: drop-shadow(0px 0px 15px rgb(169, 169, 169));
     }
 
     .achv {
-      border: yellow solid 3px;
+      margin: 0 10px;
+      border: 3px solid transparent;
+      border-radius: 20px;
+      background-image: linear-gradient(#ffffff, #ffffff), linear-gradient(to right, rgb(237, 217, 66), rgb(255, 255, 255), rgb(216, 204, 39), rgb(239, 219, 62));
+      background-origin: border-box;
+      background-clip: content-box, border-box;
     }
+
+    /* .achv {
+      margin: 0 10px;
+      border: 3px solid transparent;
+      border-radius: 20px;
+      background-image: linear-gradient(#ffffff, #ffffff), linear-gradient(to right, #fbfcb9be, #ffcdf3aa, #65d3ffaa);
+      background-origin: border-box;
+      background-clip: content-box, border-box;
+    } */
 
     td h3 {
       text-align: left;
@@ -452,7 +466,9 @@
         <table class="manholetableline">
           <tr>
             <th>
-              <div class="achv"><img src="../src/assets/achv/pika.png" alt="" /></div>
+              <div class="achv">
+                <img src="../src/assets/achv/pika.png" alt="" />
+              </div>
             </th>
             <td colspan="6">
               <h3>영원한 나의 친구</h3>
@@ -462,7 +478,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/pairi.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/pairi.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>"꼬리가 타고 있는 작은 소리가 들려"</h3>
               <h4>5 / 13</h4>
@@ -471,7 +489,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/kobugi.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/kobugi.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>"눈물이 아니라 물대포야!"</h3>
               <h4>5 / 13</h4>
@@ -480,7 +500,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/isanghae.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/isanghae.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>"햇빛을 받을수록 힘이 솟아나"</h3>
               <h4>5 / 13</h4>
@@ -489,7 +511,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/3start.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/3start.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>최초의 삼총사</h3>
               <h4>5 / 13</h4>
@@ -498,7 +522,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/butterful.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/butterful.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>”예쁜 꽃의 꿀을 찾아서”</h3>
               <h4>5 / 13</h4>
@@ -507,7 +533,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/bird.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/bird.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>용감한 하늘의 에이스</h3>
               <h4>5 / 13</h4>
@@ -516,7 +544,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/purin.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/purin.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>잠이 올 것 같은 기분 좋은 노래</h3>
               <h4>5 / 13</h4>
@@ -525,7 +555,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/sixtale.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/sixtale.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>따스한 여섯 갈래의 꼬리</h3>
               <h4>5 / 13</h4>
@@ -534,7 +566,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/gorapaduk.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/gorapaduk.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>”항상 두통에 시달려”</h3>
               <h4>5 / 13</h4>
@@ -543,7 +577,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/yadon.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/yadon.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>물가에서 멍때리기</h3>
               <h4>5 / 13</h4>
@@ -552,7 +588,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/celler.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/celler.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>다이아몬드보다 딱딱한 껍질</h3>
               <h4>5 / 13</h4>
@@ -561,7 +599,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/yadoran.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/yadoran.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>기본적으로 멍하니 있음</h3>
               <h4>5 / 13</h4>
@@ -570,7 +610,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/eve.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/eve.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>수많은 가능성과 꿈을 가진</h3>
               <h4>5 / 13</h4>
@@ -579,7 +621,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/eevee.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/eevee.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>이브이루션!</h3>
               <h4>5 / 13</h4>
@@ -588,7 +632,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/paori.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/paori.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>”파 줄기가 없으면 살 수 없다”</h3>
               <h4>5 / 13</h4>
@@ -597,7 +643,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/phantom.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/phantom.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>그림자 속의 저주</h3>
               <h4>5 / 13</h4>
@@ -606,7 +654,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/tangguri.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/tangguri.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>어미를 만날 수 없는 슬픔</h3>
               <h4>5 / 13</h4>
@@ -615,7 +665,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/byulgasari.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/byulgasari.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>바다로 떨어진 무수한 별들</h3>
               <h4>5 / 13</h4>
@@ -624,7 +676,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/ingeoking.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/ingeoking.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>튀어오르기를(을) 사용했다!</h3>
               <h4>5 / 13</h4>
@@ -633,7 +687,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/jamman.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/jamman.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>먹고나면 잘 뿐</h3>
               <h4>5 / 13</h4>
@@ -642,7 +698,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/pangdori.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/pangdori.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>고집세지만 귀여워</h3>
               <h4>5 / 13</h4>
@@ -651,7 +709,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/bulkot.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/bulkot.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>손발에 불꽃을 두르고</h3>
               <h4>5 / 13</h4>
@@ -660,7 +720,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/mobugi.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/mobugi.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>어린잎거북이</h3>
               <h4>5 / 13</h4>
@@ -669,7 +731,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/hankariasu.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/hankariasu.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>신오지방의 하늘</h3>
               <h4>5 / 13</h4>
@@ -678,7 +742,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/darkrai.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/darkrai.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>악몽 속에 나타난 정체</h3>
               <h4>5 / 13</h4>
@@ -687,7 +753,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/nyasuper.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/nyasuper.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>초능력 냐옹</h3>
               <h4>5 / 13</h4>
@@ -696,7 +764,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/tarakyu.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/tarakyu.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>？？？</h3>
               <h4>5 / 13</h4>
@@ -705,7 +775,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/myu.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/myu.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>모든 것들의 선조</h3>
               <h4>5 / 13</h4>
@@ -714,7 +786,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/chilsaek.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/chilsaek.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>하늘에 뜬 무지개</h3>
               <h4>5 / 13</h4>
@@ -723,7 +797,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/lugia.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/lugia.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>생명과 공존의 상징</h3>
               <h4>5 / 13</h4>
@@ -732,7 +808,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/gaioga.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/gaioga.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>폭풍을 불러들이는 대양의 힘</h3>
               <h4>5 / 13</h4>
@@ -741,7 +819,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/grandon.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/grandon.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>대지를 쌓아올리는 대륙의 힘</h3>
               <h4>5 / 13</h4>
@@ -750,7 +830,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/rekujya.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/rekujya.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>구름보다 아득히 먼 위</h3>
               <h4>5 / 13</h4>
@@ -759,7 +841,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/diaruga.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/diaruga.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>시간의 흐름을 만들어내는 존재</h3>
               <h3></h3>
@@ -769,7 +853,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/perlgia.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/perlgia.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>평행으로 늘어선 공간의 틈새</h3>
               <h4>5 / 13</h4>
@@ -778,7 +864,9 @@
             </td>
           </tr>
           <tr>
-            <th><img src="../src/assets/achv/arceus.png" alt="" /></th>
+            <th>
+              <div class="achv"><img src="../src/assets/achv/arceus.png" alt="" /></div>
+            </th>
             <td colspan="6">
               <h3>"아르세우스"</h3>
               <h4>5 / 13</h4>
